tests/neg/i7359-g.scala
trait SAMTrait:
  def first(): String
  def equals(obj: Int): Boolean

val m : SAMTrait = () => "Hello" // error
